# cpp-result

./: CMakeLists.txt  README.md  TEST_README.md  benchmark_result.cpp  main.cpp  test_result.cpp
examples/: example.cpp  test_result.cpp
inc/: result-helper.hpp  result-type-constructor.hpp  result-type-definition.hpp  result-type-monadics.hpp  result-type-observers.hpp  result.hpp
result/: panic.hpp  result-type-monadics.hpp
